Fix Night Light disabling software cursor when it shouldn't

When Night Light doesn't require software cursor, it should
respect other accessibility settings that need the software
cursor.

BUG=854697
TEST=Expanded test.

Change-Id: I6fe29a762265e7319f83af2a1eabe6b608b818c6
Reviewed-on: https://chromium-review.googlesource.com/1109457
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569384}
Former-commit-id: cbe29f709b7c6814a8da99fc8522b71365ab3eb8